--- a/package.json
+++ b/package.json
@@ -2,10 +2,19 @@
   "name": "touhou-on-bash",
   "version": "1.0.0",
   "description": "Bad Apple animation on bash",
-  "main": "index.js",
+  "main": "index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Carlos H",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "url": "https://github.com/riquinhuw/bad-apple-on-bash"
+  },
+  "dependencies": {
+    "ffmpeg": "^0.0.4",
+    "ffmpeg-extract-frames": "^2.0.2",
+    "ffmpeg-extract-frames-quality": "^2.0.2",
+    "jimp": "^0.16.2"
+  }
 }
